--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
         "baseUrl": "./lib"
     },
     "include": [
-        "lib/**/*.ts",
-        "config/*.ts"
+        "lib/**/*.ts"
     ],
     "exclude": [
         "node_modules"
