--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,11 @@
         "sourceMap": true,
         "target": "es6",
         "outDir": "./dist",
-        "baseUrl": "./lib"
+        "baseUrl": "./lib",
+        "resolveJsonModule": true
     },
     "include": [
-        "lib/**/*.ts"
+        "lib/**/*"
     ],
     "exclude": [
         "node_modules"
